--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar fixed-bottom bg-dark">
   <div class="container-fluid d-flex justify-content-center" id="navbar">
     <a href="https://mitsuya-creator.github.io/website" class="mx-5 text-decoration-none text-white lh-5 border-bottom border-light" target="_blank">Home</a>
-    <a href="./pages/contact.html" class="mx-5 text-decoration-none text-muted" target="_blank">Contact</a>
+    <a href="./contact/contact.html" class="mx-5 text-decoration-none text-muted" target="_blank">Contact</a>
   </div>
 </nav>
 <div class="container-sub-1">
