--- a/contact/contact.html
+++ b/contact/contact.html
@@ -20,7 +20,7 @@
     <div id="container-main">
     <nav class="navbar fixed-bottom bg-dark">
   <div class="container-fluid d-flex justify-content-center" id="navbar">
-    <a href="https://mitsuya-creator.github.io/website" class="mx-5 text-decoration-none text-muted" target="_blank">Home</a>
+    <a href="../index.html" class="mx-5 text-decoration-none text-muted" target="_blank">Home</a>
     <a href="https://mitsuya-creator.github.io/website/pages/contact.html" class="mx-5 text-decoration-none text-white lh-5 border-bottom border-light" target="_blank">Contact</a>
   </div>
 </nav>
