--- a/contact/contact.html
+++ b/contact/contact.html
@@ -26,7 +26,7 @@
 </nav>
 <div class="container-sub-1">
     <div id="heading" class="d-flex justify-content-center">
-      <h1 style="font-size: 10vw; z-index:100;">0xtakashi</h1>
+      <span style="font-size: 10vw; z-index:100;">Contact/</span>
     </div>
     <div id="social" class="d-flex justify-content-center" style="z-index:100;">
       <a href="https://github.com/mitsuya-creator" class="text-decoration-none lh-5 px-4 py-2 text-dark">github</a>
