--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
   <link rel="stylesheet" href="./css/style.css" type="text/css" />
 </head>
 
-<body>
+<body style="background-color: black;">
   <div id="container-main">
     <nav class="navbar fixed-bottom bg-dark">
       <div class="container-fluid d-flex justify-content-center" id="navbar">
         <a href="https://mitsuya-creator.github.io/website"
-          class="mx-5 text-decoration-none text-white lh-5 border-bottom border-light" target="_blank">Home</a>
-        <a href="./contact/contact.html" class="mx-5 text-decoration-none text-muted" target="_blank">Contact</a>
+          class="home mx-5 text-decoration-none text-white lh-5 border-bottom border-light" target="_blank">Home</a>
+        <a href="./contact/contact.html" class="contact mx-5 text-decoration-none text-muted"
+          target="_blank">Contact</a>
       </div>
     </nav>
     <div class="container-sub-1">
       <div id="heading" class="d-flex justify-content-center">
-        <span style="font-size: 10vw; z-index:100;">0xtakashi/</span>
+        <span style="z-index:100;">0xtakashi/</span>
       </div>
       <div id="social" class="d-flex justify-content-center" style="z-index:100;">
         <a href="https://github.com/mitsuya-creator" class="text-decoration-none lh-5 px-4 py-2 text-dark">github</a>
@@ -39,18 +40,18 @@
           class="text-decoration-none text-dark border-start border-dark lh-5 px-4 py-2">medium</a>
       </div>
     </div>
-    <div class="blank" style="height: 100vh; background-color: black; width: 100vw;">
-      <div class="introduction text-white mx-3" id="introduction" style="opacity: 0;">
+    <div class="blank" style="background-color: black; width: 100vw;">
+      <div class="introduction text-white ms-3 my-4" id="introduction" style="opacity: 0; background-color: black;">
         <span>Hi,</span><br>
         <span>I am 0xtakashi,</span><br>
         <span>Web developer</span><br>
       </div>
-      <div class="skill-list text-white mx-3" style="margin-top: 10vw;">
+      <div class="skill-list text-white mx-3">
         <h1>Skill Set</h1>
         <div class="skill-bar">
           <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" class="text-decoration-none text-white"
             title="https://developer.mozilla.org/en-US/docs/Web/HTML">HyperText Markup Language (HTML)</a>
-          <div class="progress" style="height: 3vw;">
+          <div class="progress">
             <div class="progress-bar" role="progressbar" aria-label="Example with label" aria-valuenow="50"
               aria-valuemin="0" aria-valuemax="100" style="width: 0%;" id="html-bar"></div>
           </div>
@@ -58,7 +59,7 @@
         <div class="skill-bar">
           <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" class="text-decoration-none text-white"
             title="https://developer.mozilla.org/en-US/docs/Web/CSS">Cascading Style Sheets (CSS)</a>
-          <div class="progress" style="height: 3vw;">
+          <div class="progress">
             <div class="progress-bar" role="progressbar" aria-label="Example with label" aria-valuenow="50"
               aria-valuemin="0" aria-valuemax="100" style="width: 0%; " id="css-bar"></div>
           </div>
@@ -66,7 +67,7 @@
         <div class="skill-bar">
           <a href="https://getbootstrap.com" class="text-decoration-none text-white"
             title="https://getbootstrap.com">Bootstrap</a>
-          <div class="progress" style="height: 3vw;">
+          <div class="progress">
             <div class="progress-bar" role="progressbar" aria-label="Example with label" aria-valuenow="50"
               aria-valuemin="0" aria-valuemax="100" style="width: 0%; " id="bootstrap-bar"></div>
           </div>
@@ -74,7 +75,7 @@
         <div class="skill-bar">
           <a href="https://developer.mozilla.org/en-US/docs/Web/javascript" class="text-decoration-none text-white"
             title="https://developer.mozilla.org/en-US/docs/Web/javascript">JavaScript</a>
-          <div class="progress" style="height: 3vw;">
+          <div class="progress">
             <div class="progress-bar" role="progressbar" aria-label="Example with label" aria-valuenow="50"
               aria-valuemin="0" aria-valuemax="100" style="width: 0%; " id="javascript-bar"></div>
           </div>
