--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
           class="text-decoration-none text-dark border-start border-dark lh-5 px-4 py-2">medium</a>
       </div>
     </div>
-    <div class="blank" style="background-color: black; width: 100vw;">
+    <div class="blank" style="background-color: black; width: 100vw;" id="blank">
       <div class="introduction text-white ms-3 my-4" id="introduction" style="opacity: 0; background-color: black;">
         <span>Hi,</span><br>
         <span>I am 0xtakashi,</span><br>
         <span>Web developer</span><br>
       </div>
-      <div class="skill-list text-white mx-3">
+      <div class="skill-list text-white mx-3" id="skill-list">
         <h1>Skill Set</h1>
         <div class="skill-bar">
           <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" class="text-decoration-none text-white"
@@ -84,7 +84,7 @@
     </div>
     <div class="container-sub-2">
       <div class="project-heading d-flex justify-content-center" style="background-color: black;">
-        <span style="font-size: 8vw;" class="text-white">Projects</span>
+        <span class="text-white">Projects</span>
       </div>
       <div class="project-list">
         <div class="card mx-5 my-3" style="max-width: 95vw;">
